--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,26 +8,23 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+
 
     <WebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-        <ImageView
-            android:id="@+id/imgview"
-            android:layout_width="200dp"
-            android:layout_height="200dp"/>
+<!--        <ImageView-->
+<!--            android:id="@+id/imgview"-->
+<!--            android:layout_width="200dp"-->
+<!--            android:layout_height="200dp"-->
+<!--            />-->
+ <!--   <com.theartofdev.edmodo.cropper.CropImageView
+          xmlns:custom="http://schemas.android.com/apk/res-auto"
+          android:id="@+id/cropImageView"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"/>-->
 
-    </FrameLayout>
 
-  <!--  <com.theartofdev.edmodo.cropper.CropImageView
-        xmlns:custom="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/cropImageView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>-->
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
